--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@500;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-weight: 500;
-}
-
-* {
   font-family: "Merriweather Sans", sans-serif;
-  font-weight: 500;
 }
 
 nav {
@@ -20,7 +15,7 @@ nav {
   position: fixed;
   background-color: none;
   padding: 0 100px;
-  z-index: 1;
+  z-index: 2;
 }
 nav .hamburger {
   display: none;
@@ -58,7 +53,7 @@ nav div ul li a {
 
 header {
   height: 100vh;
-  background: red url(../../../assets/img/header-img.jpg);
+  background: url(../img/header-img.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -69,9 +64,10 @@ header {
   color: #fff;
   position: relative;
 }
-header .opasity {
+header .header-opasity {
   position: absolute;
   background-color: rgb(104, 88, 70);
+  background-position: bottom;
   opacity: 0.7;
   width: 100%;
   height: 100vh;
@@ -80,12 +76,21 @@ header .content {
   width: 50%;
   z-index: 1;
 }
+@media screen and (max-width: 1000px) {
+  header .content {
+    width: 90%;
+  }
+}
 header .content h1 {
-  font-size: 60px;
-  font-weight: 400px;
+  font-size: 55px;
+}
+@media screen and (max-width: 1000px) {
+  header .content h1 {
+    font-size: 35px;
+  }
 }
 header .content p {
-  color: #C7D0CE;
+  color: #c7d0ce;
   font-size: 22px;
   font-family: "Merriweather", serif;
 }
@@ -95,13 +100,214 @@ header .content button {
   color: #fff;
   border: none;
   border-radius: 40px;
-  background-color: #F4623A;
-  margin-top: 20px;
+  background-color: #f4623a;
+  margin-top: 50px;
   z-index: 1;
 }
-header .header-line {
+header .line {
   width: 55px;
   height: 3px;
-  background-color: #F4623A;
+  border-top: 1px solid #000;
+  background-color: #f4623a;
   margin: 20px auto;
+}
+
+#section-download {
+  height: 500px;
+  width: 100%;
+  background-color: #f4623a;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  text-align: center;
+}
+#section-download div {
+  width: 50%;
+}
+@media screen and (max-width: 1000px) {
+  #section-download div {
+    width: 90%;
+  }
+}
+#section-download div h2 {
+  font-size: 30px;
+}
+#section-download div div {
+  width: 55px;
+  height: 3px;
+  border-top: 1px solid #000;
+  background-color: #fff;
+  margin: 20px auto;
+}
+#section-download div p {
+  font-size: 20px;
+  font-family: "Merriweather", serif;
+  color: #fcd8ce;
+}
+#section-download div button {
+  width: 170px;
+  height: 60px;
+  color: #000;
+  border: none;
+  border-radius: 40px;
+  background-color: #fff;
+  margin-top: 60px;
+  font-weight: bold;
+  z-index: 1;
+}
+
+#service {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 100px 100px;
+}
+#service h2 {
+  font-size: 30px;
+  text-align: center;
+}
+#service .line {
+  width: 55px;
+  height: 3px;
+  border-top: 1px solid #000;
+  background-color: #f4623a;
+  margin: 20px auto;
+}
+#service .cards {
+  display: flex;
+  text-align: center;
+}
+#service .cards .card-content {
+  display: flex;
+}
+#service .cards .card-content .card {
+  width: 100%;
+  padding: 20px;
+}
+#service .cards .card-content .card div {
+  font-size: 30px;
+  color: #f4623a;
+  margin: 20px 0;
+}
+#service .cards .card-content .card h3 {
+  font-size: 23px;
+  margin-bottom: 10px;
+}
+#service .cards .card-content .card p {
+  color: #b5bbba;
+  font-family: "Merriweather", serif;
+  font-size: 22px;
+}
+
+#section-images {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+#section-images div {
+  height: 100%;
+}
+#section-images div img {
+  height: inherit;
+  width: 100%;
+}
+
+#free-download {
+  width: 100%;
+  padding: 100px 0;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #212529;
+}
+#free-download h2 {
+  font-size: 30px;
+  color: #fff;
+}
+#free-download button {
+  width: 170px;
+  height: 60px;
+  color: #000;
+  border: none;
+  border-radius: 40px;
+  background-color: #fff;
+  margin-top: 30px;
+  font-weight: bold;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  padding: 100px 0;
+}
+#form div h2 {
+  font-size: 30px;
+}
+#form div .line {
+  width: 55px;
+  height: 3px;
+  border-top: 1px solid #000;
+  background-color: #f4623a;
+  margin: 20px auto;
+}
+#form div p {
+  font-family: "Merriweather", serif;
+  font-size: 20px;
+  color: #b5bbba;
+}
+#form div form {
+  margin: 40px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+#form div form input {
+  width: 100%;
+  height: 50px;
+}
+#form div form input[type=submit] {
+  width: 100%;
+  height: 60px;
+  color: #ffffff;
+  border: none;
+  border-radius: 40px;
+  background-color: #f4623a;
+  margin-top: 30px;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 800px) {
+  .card-content {
+    flex-direction: column;
+  }
+  #section-images {
+    grid-template-columns: auto auto;
+  }
+}
+@media screen and (max-width: 500px) {
+  #service .cards {
+    flex-direction: column;
+  }
+  #section-images {
+    grid-template-columns: auto;
+  }
+}
+footer {
+  width: 100%;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fafafa;
+  color: rgb(163, 154, 154);
 }
