--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,6 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@500;700&display=swap");
 header {
   height: 100vh;
-  background: red url(../../../assets/img/header-img.jpg);
+  background: url(../img/header-img.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -10,42 +11,47 @@ header {
   padding: 70px 0;
   color: #fff;
   position: relative;
-  .opasity{
+  .header-opasity {
     position: absolute;
     background-color: rgb(104, 88, 70);
+    background-position: bottom;
     opacity: 0.7;
-    width:100%;
+    width: 100%;
     height: 100vh;
   }
-  .content{
+  .content {
     width: 50%;
     z-index: 1;
-    h1{
-        font-size:60px;
-        font-weight: 400px;
+    @media screen and (max-width: 1000px) {
+      width: 90%;
     }
-    p{
-        color: #C7D0CE;
-        font-size: 22px;
-        font-family: 'Merriweather', serif;
+    h1 {
+      font-size: 55px;
+      @media screen and (max-width: 1000px) {
+        font-size: 35px;
+      }
+    }
+    p {
+      color: #c7d0ce;
+      font-size: 22px;
+      font-family: "Merriweather", serif;
+    }
+    button {
+      width: 170px;
+      height: 60px;
+      color: #fff;
+      border: none;
+      border-radius: 40px;
+      background-color: #f4623a;
+      margin-top: 50px;
+      z-index: 1;
+    }
   }
-  button{
-    width:170px;
-    height: 60px;
-    color: #fff;
-    border: none;
-    border-radius: 40px;
-    background-color:#F4623A;
-    margin-top: 20px;
-    z-index: 1;
-  }
-  }
-  .header-line{
-    width:55px;
+  .line {
+    width: 55px;
     height: 3px;
-    background-color:#F4623A;
-    margin:20px auto;
+    border-top: 1px solid #000;
+    background-color: #f4623a;
+    margin: 20px auto;
   }
-  
-  
 }
